Create bracket screen works to display and select teams.
I got rid of the mysterious empty column by moving the "ng-cloak" directive from <body> down to the specific elements that need it, like the login page.

Still need to save the user's new bracket, and finish the list/view views.

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -59,7 +59,7 @@
   <title>My AngularJS App</title>
   <link rel="stylesheet" href="css/app.css">
 </head>
-<body ng-cloak>
+<body>
 
     <ul class="menu">
         <li><a href="#/home">home</a></li>
