got create and update bracket page fully working
loading the selected brackets into ng-grid was a biotch

also: changed tournamentRef and usersRef to be $firebase objects, instead of Firebase objects

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
     </section>
   </section>
 
+  <!-- TODO: replace with minified versions, when I'm done with development -->
   <script src="/bower_components/jquery/dist/jquery.js"></script>
   <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="/bower_components/firebase/firebase.js"></script>
