--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,6 @@
 
   <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/app.css" rel="stylesheet"/>
-  <link href="/bower_components/angular-loading-bar/build/loading-bar.min.css" rel="stylesheet"/>
 
   <!-- use latest unreleased version 2.0.8, because 2.0.7 hasn't been updated and isn't getting bug fixes -->
   <link href="https://rawgithub.com/angular-ui/ng-grid/2.0.8/ng-grid.min.css" rel="stylesheet">
@@ -31,6 +30,7 @@
   <script src="/bower_components/firebase-simple-login/firebase-simple-login.js"></script>
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
+  <script src="/app/js/thirdParty/ui-bootstrap-progressbar-tpls-0.10.0.min.js"></script>
 
   <!--<script src="/bower_components/angularfire/angularfire.min.js"></script>-->
   <!-- use master version (which corresponds to 0.7.1pre), because it has bug fixes -->
