View bracket with scores is done, except for the last column (total points per team)
It took a shit ton of CSS to get the grid footer looking good, and bracketsController.js is getting a bit unwieldly. Also had to create custom version of ng-grid's headerCellTemplate.html, just to embed <br/> in the header cells!

--- a/app/index.html
+++ b/app/index.html
@@ -61,5 +61,6 @@
   <script src="js/services/bracketService.js"></script>
   <script src="js/services/poolService.js"></script>
   <script src="js/services/teamService.js"></script>
+  <script src="js/services/userService.js"></script>
 </body>
 </html>
