Revved angularfire bower dep to ~0.7.1 that was just released, instead of shipping my own.
Tweaked how brackets are loaded in poolsController.js, added a couple of ng-href for safety, and split ng-repeat from ng-include so they're not on the same <div>.

--- a/app/index.html
+++ b/app/index.html
@@ -28,10 +28,8 @@
   <script src="vendor/firebase-simple-login/firebase-simple-login.js"></script>
   <script src="vendor/angular/angular.js"></script>
   <script src="vendor/angular-route/angular-route.js"></script>
+  <script src="vendor/angularfire/angularfire.js"></script>
   <script src="js/thirdParty/ui-bootstrap-progressbar-tpls-0.10.0.min.js"></script>
-
-  <!-- use the latest commit from master (as of 3/6/2014), because it has bug fixes -->
-  <script src="js/thirdParty/angularfire-0.7.1-pre2.js"></script>
 
   <!-- use latest commit from 2.0.8 branch, because 2.0.7 release hasn't been updated in 9 months and isn't getting bug fixes -->
   <script src="js/thirdParty/ng-grid-2.0.8.debug.js"></script>
@@ -49,6 +47,7 @@
   <script src="js/service.changeEmail.js"></script>
   <script src="js/module.simpleLoginTools.js"></script>
   <script src="js/module.routeSecurity.js"></script>
+
   <script src="js/controllers/bracket-create-edit.js"></script>
   <script src="js/controllers/bracket-view.js"></script>
   <script src="js/controllers/headerController.js"></script>
