removing ng-cloak from <body>, and adding it back to the login and account pages
fixes bug #3

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
   <!-- use latest unreleased version 2.0.8, because 2.0.7 hasn't been updated and isn't getting bug fixes -->
   <link href="css/thirdParty/ng-grid-2.0.8.min.css" rel="stylesheet">
 </head>
-<body data-ng-cloak>
+<body>
 
 <header data-ng-include="'views/header.html'"></header>
 
