Extracted a separate controller for the pool view page, since poolsController.js was getting a little long.
Also fixed a bug with the Create Pool button using the wrong model property in its ng-show directive.

--- a/client/index.html
+++ b/client/index.html
@@ -52,6 +52,7 @@
   <script src="js/controllers/bracket-create-edit.js"></script>
   <script src="js/controllers/bracket-view.js"></script>
   <script src="js/controllers/headerController.js"></script>
+  <script src="js/controllers/pool-view-controller.js"></script>
   <script src="js/controllers/poolsController.js"></script>
   <script src="js/services/bracketService.js"></script>
   <script src="js/services/poolService.js"></script>
