--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,7 @@
   <!-- use latest commit from 2.0.8 branch, because 2.0.7 release hasn't been updated in 9 months and isn't getting bug fixes -->
   <script src="js/thirdParty/ng-grid-2.0.8.debug.js"></script>
   <!-- allows ng-grid to dynamically change the height of the grid to fit all the elements in it. Might come in handy? -->
-  <!--<script src="https://rawgithub.com/angular-ui/ng-grid/master/plugins/ng-grid-flexible-height.js"></script>-->
+  <script src="js/thirdParty/ng-grid-flexible-height.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
@@ -50,6 +50,7 @@
   <script src="js/module.routeSecurity.js"></script>
 
   <script src="js/controllers/bracket-create-edit.js"></script>
+  <script src="js/controllers/bracket-list.js"></script>
   <script src="js/controllers/bracket-view.js"></script>
   <script src="js/controllers/headerController.js"></script>
   <script src="js/controllers/poolsController.js"></script>
