Forgot to switch underscore.js to lodash.min.js in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
 
   <!-- TODO: replace with minified versions, when I'm done with development -->
   <script src="vendor/jquery/dist/jquery.js"></script>
-  <script src="vendor/underscore/underscore.js"></script>
+  <script src="vendor/lodash/dist/lodash.min.js"></script>
   <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="vendor/firebase/firebase.js"></script>
   <script src="vendor/firebase-simple-login/firebase-simple-login.js"></script>
