adds angular-smart-table module

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
   <script src="vendor/angular/angular.min.js"></script>
   <script src="vendor/angular-route/angular-route.min.js"></script>
   <script src="vendor/angularfire/angularfire.min.js"></script>
+  <script src="vendor/angular-smart-table/dist/smart-table.min.js"></script>
   <script src="vendor/ng-grid/build/ng-grid.min.js"></script>
   <script src="vendor/momentjs/min/moment.min.js"></script>
   <script src="vendor/momentjs/min/locales.min.js"></script>
