rewrites bracket view ngGrid table with SmartTable, which is much faster
The styling is a tiny bit different (mostly on purpose), but barely perceptible, and maybe an improvement.

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   <link href="vendor/ng-grid/ng-grid.min.css" rel="stylesheet">
   <link href="css/app.css" rel="stylesheet"/>
 </head>
-<body>
+<body id="bootstrap-overrides">
 
 <header data-ng-include="'views/header.html'"></header>
 
