--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link href="favicon.ico" rel="shortcut icon">
   <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="vendor/ng-grid/ng-grid.min.css" rel="stylesheet">
   <link href="css/app.css" rel="stylesheet"/>
